--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:orientation="vertical"
-    tools:context="com.jins_meme.visualizing_blinks_and_6axis.ConnectActivity">
+    tools:context=".ConnectActivity">
 
     <ListView
         android:id="@+id/device_list_view"
