--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
         android:src="@drawable/main_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop" />
 
     <TextView
         android:text="ポポコ"
@@ -33,10 +33,10 @@
         android:paddingRight="36dp"
         android:paddingLeft="40dp"
         android:paddingBottom="6dp"
-        android:background="@drawable/frame_button_style"
+        android:background="@drawable/frame_button_transparent_bold"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/top_title"
         android:layout_marginTop="120dp"
-        android:drawableRight="@drawable/engel"/>
+        android:drawableRight="@drawable/engel_emoji"/>
 
 </RelativeLayout>
