--- a/app/src/main/res/layout/select_instruments_activity.xml
+++ b/app/src/main/res/layout/select_instruments_activity.xml
@@ -198,9 +198,9 @@
 
             <!-- ピアノイラスト -->
             <ImageView
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:background="@color/red"/>
+                android:src="@drawable/piano"
+                android:layout_width="180dp"
+                android:layout_height="180dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -221,9 +221,10 @@
 
             <!-- ギターイラスト -->
             <ImageView
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:background="@color/red"/>
+                android:src="@drawable/guitar"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                android:rotation="-20" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -244,9 +245,9 @@
 
             <!-- ベースイラスト -->
             <ImageView
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:background="@color/red"/>
+                android:src="@drawable/bass"
+                android:layout_width="180dp"
+                android:layout_height="180dp" />
 
             <TextView
                 android:layout_width="wrap_content"
