--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,4 +39,13 @@
         android:layout_marginTop="120dp"
         android:drawableRight="@drawable/engel_emoji"/>
 
+    <Button
+        android:layout_below="@+id/button_start"
+        android:id="@+id/button_connect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="接続する"
+        android:layout_marginTop="30dp"
+        android:layout_centerHorizontal="true"/>
+
 </RelativeLayout>
