--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,16 +10,13 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop" />
 
-    <TextView
-        android:text="ポポコ"
-        android:textSize="54dp"
+    <ImageView
         android:id="@+id/top_title"
+        android:src="@drawable/logo_popoco"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:textStyle="bold"
+        android:layout_height="260dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="120dp"/>
+        android:layout_marginTop="30dp"/>
 
     <Button
         android:id="@+id/button_start"
@@ -36,7 +33,7 @@
         android:background="@drawable/frame_button_transparent_bold"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/top_title"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="20dp"
         android:drawableRight="@drawable/engel_emoji"/>
 
     <Button
@@ -52,7 +49,5 @@
         android:paddingLeft="20dp"
         android:background="@drawable/frame_button_transparent_bold"
         android:layout_alignParentBottom="true"/>
-
-
 
 </RelativeLayout>
