--- a/app/src/main/res/layout/select_bgm_activity.xml
+++ b/app/src/main/res/layout/select_bgm_activity.xml
@@ -47,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="サンプル2"
+            android:text="サカナクション"
             android:textColor="@color/white"
             android:textSize="28dp"/>
 
