--- a/app/src/main/res/layout/activity_live_view.xml
+++ b/app/src/main/res/layout/activity_live_view.xml
@@ -17,41 +17,58 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/effect_image_0"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:background="@color/black"/>
-
-        <ImageView
-            android:id="@+id/effect_image_1"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:background="@color/black"/>
-
-        <ImageView
-            android:id="@+id/effect_image_2"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:background="@color/black"/>
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/effect_image_3"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:background="@drawable/effect1"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:background="@color/black"/>
+            android:layout_centerHorizontal="true"/>
+
+        <ImageView
+            android:id="@+id/effect_image_0"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/effect1"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"/>
+
+        <ImageView
+            android:id="@+id/effect_image_1"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/effect1"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"/>
+
+        <ImageView
+            android:id="@+id/effect_image_2"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/effect1"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"/>
 
     </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/layout_countdown_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:background="#bb000000">
+
+        <TextView
+            android:id="@+id/text_countdown"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="カウントダウン"
+            android:textColor="@color/white"
+            android:textSize="25sp"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
