--- a/app/src/main/res/layout/activity_live_view.xml
+++ b/app/src/main/res/layout/activity_live_view.xml
@@ -20,34 +20,145 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/effect_image_3"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:id="@+id/effect1_image_3"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/effect1"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true" />
 
         <ImageView
-            android:id="@+id/effect_image_0"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:id="@+id/effect1_image_0"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:background="@drawable/effect1"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"/>
 
         <ImageView
-            android:id="@+id/effect_image_1"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:id="@+id/effect1_image_1"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/effect1"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"/>
 
         <ImageView
-            android:id="@+id/effect_image_2"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:id="@+id/effect1_image_2"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:background="@drawable/effect1"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"/>
+
+        <ImageView
+            android:id="@+id/effect2_image_3"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="100dp"
+            android:background="@drawable/effect2"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
+
+        <ImageView
+            android:id="@+id/effect2_image_0"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginRight="80dp"
+            android:background="@drawable/effect2"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"/>
+
+        <ImageView
+            android:id="@+id/effect2_image_1"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginBottom="100dp"
+            android:background="@drawable/effect2"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"/>
+
+        <ImageView
+            android:id="@+id/effect2_image_2"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="80dp"
+            android:background="@drawable/effect2"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"/>
+
+        <ImageView
+            android:id="@+id/effect3_image_3"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/effect3"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@id/effect1_image_3"
+            android:layout_marginTop="100dp"
+            android:layout_marginLeft="40dp" />
+
+        <ImageView
+            android:id="@+id/effect3_image_0"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/effect3"
+            android:layout_toRightOf="@id/effect1_image_1"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="100dp"
+            android:layout_marginLeft="40dp"/>
+
+        <ImageView
+            android:id="@+id/effect3_image_1"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/effect3"
+            android:layout_toLeftOf="@id/effect1_image_1"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="100dp"
+            android:layout_marginRight="40dp"/>
+
+        <ImageView
+            android:id="@+id/effect3_image_2"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/effect3"
+            android:layout_toLeftOf="@id/effect1_image_3"
+            android:layout_marginTop="100dp"
+            android:layout_marginRight="40dp"/>
+
+        <ImageView
+            android:id="@+id/effect4_image_3"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/effect4"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
+
+        <ImageView
+            android:id="@+id/effect4_image_0"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/effect4"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"/>
+
+        <ImageView
+            android:id="@+id/effect4_image_1"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/effect4"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"/>
+
+        <ImageView
+            android:id="@+id/effect4_image_2"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/effect4"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"/>
 
