--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,29 +12,30 @@
 
     <ImageView
         android:id="@+id/top_title"
-        android:src="@drawable/logo_popoco"
         android:layout_width="wrap_content"
-        android:layout_height="260dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"/>
+        android:layout_height="90dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="100dp"
+        android:src="@drawable/logo_popoco" />
 
     <Button
         android:id="@+id/button_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="200dp"
+        android:background="@drawable/frame_button_transparent_bold"
+        android:drawableRight="@drawable/engel_emoji"
+        android:paddingBottom="6dp"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp"
+        android:paddingTop="6dp"
         android:text="遊ぶ "
         android:textColor="@color/white"
         android:textSize="30dp"
-        android:textStyle="bold"
-        android:paddingTop="6dp"
-        android:paddingRight="36dp"
-        android:paddingLeft="40dp"
-        android:paddingBottom="6dp"
-        android:background="@drawable/frame_button_transparent_bold"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/top_title"
-        android:layout_marginTop="20dp"
-        android:drawableRight="@drawable/engel_emoji"/>
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/button_connect"
